# SelfPlayMusic

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/fmy/selfplaymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/fmy/selfplaymusic/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fmy/selfplaymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
